# OrbbecCamera_cpp

./: CMakeLists.txt  README.md  install_cmake.sh  install_orbbecsdk_v2.sh  main.cpp
include/: OrbbecCameraInterface.h
src/: OrbbecCameraInterface.cpp
